--- a/src/ui/AutocompleteMultiselect.css
+++ b/src/ui/AutocompleteMultiselect.css
@@ -1,6 +1,4 @@
-/*
-Place your custom CSS here
-*/
-.widget-hello-world {
-
+.MuiIconButton-label input[type="checkbox"] {
+    cursor: pointer;
+    position: absolute !important;
 }
