--- a/src/ui/AutocompleteMultiselect.css
+++ b/src/ui/AutocompleteMultiselect.css
@@ -2,3 +2,15 @@
     cursor: pointer;
     position: absolute !important;
 }
+
+.MuiAutocomplete-root {
+    width: 100%;
+}
+
+.MuiFormLabel-root.MuiInputLabel-root, .MuiFormControl-root .MuiInputBase-root{
+    font-size: 16px;
+}
+
+.MuiChip-root .MuiChip-label {
+    font-size: 12px;
+}
