--- a/test/themesource/datawidgets/web/_datagrid-design-properties.scss
+++ b/test/themesource/datawidgets/web/_datagrid-design-properties.scss
@@ -1,79 +1,62 @@
 .table-compact {
     .th {
-        padding: var(--spacing-small, $dg-spacing-small);
+        padding: $spacing-small;
 
         .filter-selectors {
-            margin: 0 var(--spacing-small, $dg-spacing-small);
+            margin: 0 $spacing-small;
         }
     }
-
-    &:has(.th .column-container .filter:not(:empty)) {
-        .th {
-            &.column-selector {
-                padding: var(--spacing-small, $dg-spacing-small) 0;
-            }
-            &.widget-datagrid-col-select {
-                padding-bottom: calc(var(--spacing-small, $dg-spacing-small) + 11px);
-            }
-        }
-    }
-
     .td {
-        padding: var(--spacing-small, $dg-spacing-small);
+        padding: $spacing-small;
     }
 
     .dropdown-container .dropdown-list {
-        margin: 0 var(--spacing-small, $dg-spacing-small);
-    }
-
-    .column-selector {
-        /* Column content */
-        .column-selector-content {
-            padding-right: var(--spacing-small, $dg-spacing-small);
-        }
+        margin: 0 $spacing-small;
     }
 }
 
 .table-striped {
     .tr:nth-child(odd) > .td {
-        background-color: var(--grid-bg-striped, $dg-grid-bg-striped);
+        background-color: $grid-bg-striped;
     }
 }
 
 .table-hover {
     .tr:hover > .td {
-        background-color: var(--grid-bg-hover, $dg-grid-bg-hover);
+        background-color: $grid-bg-hover;
     }
 }
 
 .table-bordered-all {
-    .th,
-    .td {
+    .th {
+        border-top-width: 1px;
+        border-top-style: solid;
         border-left-width: 1px;
         border-left-style: solid;
 
         // Column for the visibility when a column can be hidden
         &.column-selector {
             border-left-width: 0;
-        }
-
-        &:last-child,
-        &.column-selector {
             border-right-width: 1px;
             border-right-style: solid;
         }
-    }
-    .th {
-        border-top-width: 1px;
-        border-top-style: solid;
     }
 
     .td {
         border-bottom-width: 1px;
         border-bottom-style: solid;
+        border-left-width: 1px;
+        border-left-style: solid;
 
         &.td-borders {
             border-top-width: 1px;
+        }
+
+        // Column for the visibility when a column can be hidden
+        &.column-selector {
+            border-left-width: 0;
+            border-right-width: 1px;
+            border-right-style: solid;
         }
     }
 }
