--- a/test/themesource/datawidgets/web/_datagrid.scss
+++ b/test/themesource/datawidgets/web/_datagrid.scss
@@ -1,31 +1,35 @@
-$dg-background-color: #fff;
-$dg-icon-color: #606671;
-$dg-icon-size: 14px;
-$dg-pagination-button-color: #3b4251;
-$dg-pagination-caption-color: #0a1325;
-$dragging-color-effect: rgba(10, 19, 37, 0.8);
-$dg-dragging-effect-size: 4px;
+$background-color: #fff !default;
+$icon-color: #606671 !default;
+$icon-size: 14px !default;
+$pagination-button-color: #3b4251 !default;
+$pagination-caption-color: #0a1325 !default;
+$dragging-color-effect: rgba(10, 19, 37, 0.8) !default;
+$dragging-effect-size: 4px;
 
-$dg-grid-bg-striped: #fafafb;
-$dg-grid-bg-hover: #f5f6f6;
-$dg-spacing-small: 8px;
-$dg-spacing-medium: 16px;
-$dg-spacing-large: 24px;
-$dg-grid-border-color: #ced0d3;
+$grid-bg-striped: #fafafb !default;
+$grid-bg-hover: #f5f6f6 !default;
+$spacing-small: 8px !default;
+$spacing-medium: 16px !default;
+$spacing-large: 24px !default;
+$grid-border-color: #ced0d3 !default;
 
-$dg-brand-primary: #264ae5;
-$dg-brand-light: #e6eaff;
-$dg-grid-selected-row-background: $dg-brand-light;
+$brand-primary: #264ae5 !default;
+$brand-light: #e6eaff !default;
+$grid-selected-row-background: $brand-light;
 
 .table {
     position: relative;
     border-width: 0;
-    background-color: var(--bg-color-secondary, $dg-background-color);
+    background-color: $background-color;
 
     /* Table Content */
     .table-content {
         display: grid;
         position: relative;
+
+        &.infinite-loading {
+            overflow-y: scroll;
+        }
     }
 
     /* Pseudo Row, to target this object please use .tr > .td or .tr > div */
@@ -38,50 +42,15 @@ $dg-grid-selected-row-background: $dg-brand-light;
         display: flex;
         align-items: flex-start;
         font-weight: 600;
-        background-color: var(--bg-color-secondary, $dg-background-color);
+        background-color: $background-color;
         border-width: 0;
-        border-color: var(--grid-border-color, $dg-grid-border-color);
-        padding: var(--spacing-medium, $dg-spacing-medium);
+        border-color: $grid-border-color;
+        padding: $spacing-medium;
+        position: -webkit-sticky; /* Safari */
+        position: sticky;
         top: 0;
+        z-index: 1;
         min-width: 0;
-        position: relative;
-
-        &.dragging {
-            opacity: 0.5;
-            &.dragging-over-self {
-                opacity: 0.8;
-            }
-        }
-
-        &.drop-after:after,
-        &.drop-before:after {
-            content: "";
-            position: absolute;
-            top: 0;
-            height: 100%;
-            width: var(--spacing-smaller, $dg-dragging-effect-size);
-            background-color: $dragging-color-effect;
-
-            z-index: 1;
-        }
-
-        &.drop-before {
-            &:after {
-                left: 0;
-            }
-            &:not(:first-child):after {
-                transform: translateX(-50%);
-            }
-        }
-
-        &.drop-after {
-            &:after {
-                right: 0;
-            }
-            &:not(:last-child):after {
-                transform: translateX(50%);
-            }
-        }
 
         /* Clickable column header (Sortable) */
         .clickable {
@@ -95,10 +64,10 @@ $dg-grid-selected-row-background: $dg-brand-light;
             cursor: col-resize;
 
             &:hover .column-resizer-bar {
-                background-color: var(--brand-primary, $dg-brand-primary);
+                background-color: $brand-primary;
             }
             &:active .column-resizer-bar {
-                background-color: var(--brand-primary, $dg-brand-primary);
+                background-color: $brand-primary;
             }
 
             .column-resizer-bar {
@@ -114,17 +83,20 @@ $dg-grid-selected-row-background: $dg-brand-light;
             flex-grow: 1;
             align-self: stretch;
             min-width: 0;
-
-            &:not(:has(.filter)) {
-                .column-header {
-                    height: 100%;
-                }
+            padding-left: $dragging-effect-size;
+            margin-left: -$dragging-effect-size;
+            /* Styles while dragging another column */
+            &.dragging {
+                border-left: $dragging-effect-size solid $dragging-color-effect;
+                padding-left: 0;
             }
         }
 
         /* Header text */
         .column-header {
-            margin: 1px 1px calc((-1 * var(--spacing-smaller, $dg-dragging-effect-size)) + 2px);
+            height: 100%;
+            margin: 1px 1px 1px -$dragging-effect-size + 1px;
+
             display: flex;
             align-items: baseline;
 
@@ -133,15 +105,13 @@ $dg-grid-selected-row-background: $dg-brand-light;
                 flex-grow: 1;
                 text-overflow: ellipsis;
                 overflow: hidden;
-                text-wrap: nowrap;
-                align-self: center;
             }
 
             svg {
                 margin-left: 8px;
-                flex: 0 0 var(--btn-font-size, $dg-icon-size);
-                color: var(--gray-dark, $dg-icon-color);
-                height: var(--btn-font-size, $dg-icon-size);
+                flex: 0 0 $icon-size;
+                color: $icon-color;
+                height: $icon-size;
                 align-self: center;
             }
 
@@ -150,7 +120,7 @@ $dg-grid-selected-row-background: $dg-brand-light;
             }
 
             &:focus-visible {
-                outline: 1px solid var(--brand-primary, $dg-brand-primary);
+                outline: 1px solid $brand-primary;
             }
         }
 
@@ -173,26 +143,6 @@ $dg-grid-selected-row-background: $dg-brand-light;
         }
     }
 
-    /* If Column Header has filter */
-    &:has(.th .column-container .filter:not(:empty)) {
-        .th {
-            &.column-selector {
-                padding: var(--spacing-medium, $dg-spacing-medium) 0;
-            }
-            /*adjust filter-selector icon to be mid-bottom aligned */
-            .column-selector-content {
-                align-self: flex-end;
-                margin-bottom: 3px;
-            }
-
-            /*adjust checkbox toggle to be mid-bottom aligned */
-            &.widget-datagrid-col-select {
-                align-items: flex-end;
-                padding-bottom: calc(var(--spacing-medium, $dg-spacing-medium) + 11px);
-            }
-        }
-    }
-
     /* Column selector for hidable columns */
     .column-selector {
         padding: 0;
@@ -200,20 +150,22 @@ $dg-grid-selected-row-background: $dg-brand-light;
         /* Column content */
         .column-selector-content {
             align-self: center;
-            padding-right: var(--spacing-medium, $dg-spacing-medium);
+
             /* Button containing the eye icon */
             .column-selector-button {
-                $icon-margin: 7px;
+                $icon-margin: 8px;
                 /* 2px as path of icon's path is a bit bigger than outer svg */
                 $icon-slack-size: 2px;
 
                 padding: 0;
                 margin: 0;
 
-                height: calc(var(--btn-font-size, $dg-icon-size) + $icon-margin * 2 + $icon-slack-size);
-                width: calc(var(--btn-font-size, $dg-icon-size) + $icon-margin * 2 + $icon-slack-size);
+                height: ($icon-size + $icon-margin * 2 + $icon-slack-size);
+                width: ($icon-size + $icon-margin * 2 + $icon-slack-size);
 
                 svg {
+                    width: $icon-size;
+                    height: $icon-size;
                     margin: $icon-margin;
                 }
             }
@@ -224,7 +176,7 @@ $dg-grid-selected-row-background: $dg-brand-light;
                 right: 0;
                 margin: 8px;
                 padding: 0 16px;
-                background: var(--bg-color-secondary, $dg-background-color);
+                background: $background-color;
                 z-index: 102;
                 border-radius: 3px;
                 border: 1px solid transparent;
@@ -252,10 +204,10 @@ $dg-grid-selected-row-background: $dg-brand-light;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: var(--spacing-medium, $dg-spacing-medium);
+        padding: $spacing-medium;
         border-style: solid;
         border-width: 0;
-        border-color: var(--grid-border-color, $dg-grid-border-color);
+        border-color: $grid-border-color;
         border-bottom-width: 1px;
         min-width: 0;
 
@@ -264,18 +216,12 @@ $dg-grid-selected-row-background: $dg-brand-light;
             border-top-style: solid;
         }
 
-        &:focus-visible {
-            outline-width: 1px;
-            outline-style: solid;
-            outline-offset: -1px;
-            outline-color: var(--brand-primary, $dg-brand-primary);
+        &:focus {
+            outline: none;
         }
 
-        &.clickable {
-            cursor: pointer;
-        }
-
-        > .td-text {
+        > .td-text,
+        * {
             white-space: nowrap;
             word-break: break-word;
             text-overflow: ellipsis;
@@ -324,7 +270,7 @@ $dg-grid-selected-row-background: $dg-brand-light;
     white-space: nowrap;
     align-items: baseline;
     margin: 16px;
-    color: $dg-pagination-caption-color;
+    color: $pagination-caption-color;
 
     .paging-status {
         padding: 0 8px 8px;
@@ -332,12 +278,12 @@ $dg-grid-selected-row-background: $dg-brand-light;
 
     .pagination-button {
         padding: 6px;
-        color: var(--gray-darker, $dg-pagination-button-color);
+        color: $pagination-button-color;
         border-color: transparent;
         background-color: transparent;
 
         &:hover {
-            color: var(--brand-primary, $dg-brand-primary);
+            color: $brand-primary;
             border-color: transparent;
             background-color: transparent;
         }
@@ -352,7 +298,7 @@ $dg-grid-selected-row-background: $dg-brand-light;
         }
 
         &:focus-visible {
-            outline: 1px solid var(--brand-primary, $dg-brand-primary);
+            outline: 1px solid $brand-primary;
         }
     }
     .pagination-icon {
@@ -371,7 +317,7 @@ $dg-grid-selected-row-background: $dg-brand-light;
     right: 0;
     margin: 8px 0;
     padding: 0 16px;
-    background: var(--bg-color-secondary, $dg-background-color);
+    background: $background-color;
     z-index: 102;
     border-radius: 3px;
     border: 1px solid transparent;
@@ -401,15 +347,7 @@ $dg-grid-selected-row-background: $dg-brand-light;
 .widget-datagrid {
     &.widget-datagrid-selection-method-click {
         .tr.tr-selected .td {
-            background-color: $dg-grid-selected-row-background;
+            background-color: $grid-selected-row-background;
         }
     }
-}
-
-.widget-datagrid-col-select input:focus-visible {
-    outline-offset: 0;
-}
-
-.widget-datagrid-content {
-    overflow-y: auto;
 }
