--- a/test/themesource/datawidgets/web/_date-picker.scss
+++ b/test/themesource/datawidgets/web/_date-picker.scss
@@ -1,16 +1,16 @@
 /**
     Classes for React Date-Picker font-unit and color adjustments
 */
-$dg-day-color: #555;
-$dg-day-range-color: #000;
-$dg-day-range-background: #eaeaea;
-$dg-outside-month-color: #c8c8c8;
-$dg-text-color: #fff;
-$dg-border-color: #d7d7d7;
+$day-color: #555 !default;
+$day-range-color: #000 !default;
+$day-range-background: #eaeaea !default;
+$outside-month-color: #c8c8c8 !default;
+$text-color: #fff !default;
+$border-color: #d7d7d7 !default;
 
 .react-datepicker {
     font-size: 1em;
-    border: 1px solid $dg-border-color;
+    border: 1px solid $border-color;
 }
 
 .react-datepicker-wrapper {
@@ -25,7 +25,7 @@ $dg-border-color: #d7d7d7;
 
 .react-datepicker__header {
     padding-top: 0.8em;
-    background-color: var(--bg-color, $dg-background-color);
+    background-color: $background-color;
     border-color: transparent;
 }
 
@@ -54,71 +54,58 @@ $dg-border-color: #d7d7d7;
 
 .react-datepicker__day,
 .react-datepicker__day--in-range {
-    color: $dg-day-color;
+    color: $day-color;
     border-radius: 50%;
 
     &:hover {
         border-radius: 50%;
-        color: var(--brand-primary, $dg-brand-primary);
-        background-color: var(--gray-ligter, $dg-hover-color);
+        color: $brand-primary;
+        background-color: $hover-color;
     }
 }
 
 .react-datepicker__day-name {
-    color: var(--brand-primary, $dg-brand-primary);
+    color: $brand-primary;
     font-weight: bold;
 }
 
 .react-datepicker__day--outside-month {
-    color: $dg-outside-month-color;
+    color: $outside-month-color;
 }
 
 .react-datepicker__day--today:not(.react-datepicker__day--in-range),
 .react-datepicker__day--keyboard-selected {
-    color: var(--brand-primary, $dg-brand-primary);
-    background-color: var(--gray-ligter, $dg-hover-color);
-}
-
-.react-datepicker__month-select:focus-visible,
-.react-datepicker__year-select:focus-visible,
-.react-datepicker__navigation:focus-visible,
-.react-datepicker__day.react-datepicker__day--keyboard-selected {
-    outline: 1px solid var(--form-input-border-focus-color);
+    color: $brand-primary;
+    background-color: $hover-color;
 }
 
 .react-datepicker__day--selected,
 .react-datepicker__day--range-start,
 .react-datepicker__day--range-end,
 .react-datepicker__day--in-selecting-range.react-datepicker__day--selecting-range-start {
-    background-color: var(--brand-primary, $dg-brand-primary);
-    color: var(--header-text-color, $dg-text-color);
+    background-color: $brand-primary;
+    color: $text-color;
 
     &:hover {
         border-radius: 50%;
-        background-color: var(--brand-primary, $dg-brand-primary);
-        color: var(--header-text-color, $dg-text-color);
+        background-color: $brand-primary;
+        color: $text-color;
     }
 }
 
 .react-datepicker__day--in-range:not(.react-datepicker__day--range-start, .react-datepicker__day--range-end),
-.react-datepicker__day--in-selecting-range:not(
-        .react-datepicker__day--in-range,
-        .react-datepicker__month-text--in-range,
-        .react-datepicker__quarter-text--in-range,
-        .react-datepicker__year-text--in-range,
-        .react-datepicker__day--selecting-range-start
-    ) {
-    background-color: $dg-day-range-background;
-    color: $dg-day-range-color;
+.react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range, .react-datepicker__month-text--in-range, .react-datepicker__quarter-text--in-range, .react-datepicker__year-text--in-range, .react-datepicker__day--selecting-range-start) {
+    background-color: $day-range-background;
+    color: $day-range-color;
 
     &:hover {
-        background-color: var(--brand-primary, $dg-brand-primary);
-        color: var(--header-text-color, $dg-text-color);
+        background-color: $brand-primary;
+        color: $text-color;
     }
 }
 
 button.react-datepicker__close-icon::after {
-    background-color: var(--brand-primary, $dg-brand-primary);
+    background-color: $brand-primary;
 }
 
 .react-datepicker__current-month {
@@ -149,5 +136,5 @@ Space between the fields and the popup
  */
 .react-datepicker-popper[data-placement^="bottom"] {
     margin-top: unset;
-    padding-top: 0;
+    padding-top: 8px;
 }
