--- a/test/themesource/datawidgets/web/_gallery.scss
+++ b/test/themesource/datawidgets/web/_gallery.scss
@@ -3,13 +3,10 @@
 
    Override styles of Gallery widget
 ========================================================================== */
-$gallery-screen-lg: 992px;
-$gallery-screen-md: 768px;
-
 @mixin grid-items($number, $suffix) {
     @for $i from 1 through $number {
         &.widget-gallery-#{$suffix}-#{$i} {
-            grid-template-columns: repeat($i, minmax(0, 1fr));
+            grid-template-columns: repeat($i, 1fr);
         }
     }
 }
@@ -25,26 +22,26 @@ $gallery-screen-md: 768px;
 .widget-gallery {
     .widget-gallery-items {
         display: grid;
-        grid-gap: var(--spacing-small, $dg-spacing-small);
+        grid-gap: $spacing-small;
 
         /*
          Desktop widths
          */
-        @media screen and (min-width: $gallery-screen-lg) {
+        @media screen and (min-width: $screen-lg) {
             @include grid-items(12, "lg");
         }
 
         /*
          Tablet widths
          */
-        @media screen and (min-width: $gallery-screen-md) and (max-width: ($gallery-screen-lg - 1px)) {
+        @media screen and (min-width: $screen-md) and (max-width: ($screen-lg - 1px)) {
             @include grid-items(12, "md");
         }
 
         /*
          Phone widths
          */
-        @media screen and (max-width: ($gallery-screen-md - 1)) {
+        @media screen and (max-width: ($screen-md - 1)) {
             @include grid-items(12, "sm");
         }
     }
@@ -57,14 +54,13 @@ $gallery-screen-md: 768px;
         }
 
         &:focus-visible {
-            outline: 1px solid var(--brand-primary, $dg-brand-primary);
-            outline-offset: -1px;
+            outline: 1px solid $brand-primary;
         }
     }
 
     &:not(.widget-gallery-disable-selected-items-highlight) {
         .widget-gallery-item.widget-gallery-clickable.widget-gallery-selected {
-            background: $dg-brand-light;
+            background: $brand-light;
         }
     }
 
@@ -83,8 +79,4 @@ $gallery-screen-md: 768px;
       */
     @include grid-span(12, "column");
     @include grid-span(12, "row");
-}
-
-.widget-gallery-item-button {
-    width: inherit;
 }
