enable grouping of options

--- a/src/ui/AutocompleteMultiselect.css
+++ b/src/ui/AutocompleteMultiselect.css
@@ -14,3 +14,10 @@
 .MuiChip-root .MuiChip-label {
     font-size: 12px;
 }
+
+.MuiPaper-root .MuiListSubheader-root.MuiAutocomplete-groupLabel {
+    height: 32px;
+    line-height: 32px;
+    background-color: #0086d9;
+    color: #fff;
+}
