--- a/src/ui/AutocompleteMultiselect.css
+++ b/src/ui/AutocompleteMultiselect.css
@@ -18,6 +18,6 @@
 .MuiPaper-root .MuiListSubheader-root.MuiAutocomplete-groupLabel {
     height: 32px;
     line-height: 32px;
-    background-color: #0086d9;
+    background-color: #90caf9;
     color: #fff;
 }
