--- a/src/ui/AutocompleteMultiselect.css
+++ b/src/ui/AutocompleteMultiselect.css
@@ -20,4 +20,7 @@
     line-height: 32px;
     background-color: #90caf9;
     color: #fff;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
